cache transcode bundle size
