# internal/api/handler/docs/swagger.json
@@ -2249,7 +2249,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/artifact.TranscodeSizesInfo"
+                            "$ref": "#/definitions/models.TranscodeSizesInfo"
                         }
                     },
                     "400": {
@@ -3276,33 +3276,6 @@
         }
     },
     "definitions": {
-        "artifact.RenditionSize": {
-            "type": "object",
-            "properties": {
-                "resolution": {
-                    "description": "e.g., \"360p\", \"480p\", etc.",
-                    "type": "string"
-                },
-                "size": {
-                    "description": "Total size of all files in the rendition directory in bytes",
-                    "type": "integer"
-                }
-            }
-        },
-        "artifact.TranscodeSizesInfo": {
-            "type": "object",
-            "properties": {
-                "renditions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/artifact.RenditionSize"
-                    }
-                },
-                "total_size": {
-                    "type": "integer"
-                }
-            }
-        },
         "handler.IndexResponse": {
             "type": "object",
             "properties": {
@@ -3744,6 +3717,9 @@
                 "transcode_progress": {
                     "type": "number"
                 },
+                "transcode_sizes": {
+                    "$ref": "#/definitions/models.TranscodeSizesInfo"
+                },
                 "transcode_status": {
                     "description": "Transcode",
                     "allOf": [
@@ -3790,6 +3766,19 @@
                 "MediaTypeEpisode",
                 "MediaTypeMusic"
             ]
+        },
+        "models.RenditionSize": {
+            "type": "object",
+            "properties": {
+                "resolution": {
+                    "description": "e.g., \"360p\", \"480p\", etc.",
+                    "type": "string"
+                },
+                "size": {
+                    "description": "Total size of all files in the rendition directory in bytes",
+                    "type": "integer"
+                }
+            }
         },
         "models.SearchResult": {
             "type": "object",
@@ -3968,6 +3957,20 @@
                 },
                 "worker_id": {
                     "type": "string"
+                }
+            }
+        },
+        "models.TranscodeSizesInfo": {
+            "type": "object",
+            "properties": {
+                "renditions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.RenditionSize"
+                    }
+                },
+                "total_size": {
+                    "type": "integer"
                 }
             }
         },
